--- a/pom.xml
+++ b/pom.xml
@@ -108,12 +108,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>-->
-        <dependency>
+<!--        <dependency>
             <groupId>com.laptrinhb2a.springboot</groupId>
             <artifactId>mail-sender</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <type>jar</type>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
